force-app/main/default/objects/BatchExecutionMetadata__mdt/BatchExecutionMetadata__mdt.object-meta.xml
<CustomObject>
    <description>This metadata will be used in batchExecutionLWC in order to make it dynamic</description>
    <label>BatchExecutionMetadata</label>
    <pluralLabel>BatchExecutionMetadatas</pluralLabel>
</CustomObject>