force-app/main/default/objects/BatchExecutionMetadata__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <length>3</length>
    <type>Text</type>
</CustomField>