force-app/main/default/objects/BatchExecutionMetadata__mdt/fields/BatchClassName__c.field-meta.xml
<CustomField>
    <fullName>BatchClassName__c</fullName>
    <label>BatchClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>