force-app/main/default/objects/BatchExecutionMetadata__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for making the entry active and inactive</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>